<resources>
    <string name="app_name">Movie_MVVM</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="retry">retry</string>
    <string name="no_results_found">No Results Found</string>
    <string name="can_t_load_movies">Can\'t Load Movies</string>
    <string name="fake_title">Venom</string>
    <string name="fake_date">10/17</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews">Reviews :</string>
    <string name="cast">Cast :</string>
    <string name="popular_movies">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="trailer">Trailer :</string>
    <string name="emptyReview">No Reviews Found</string>
    <string name="fake_duration">1h 12min</string>
    <string name="fake_director">sam mendes</string>
    <string name="genre">Action</string>
    <string name="movie_date">10/20/2020</string>
    <string name="search">search</string>
    <string name="no_search_yet">No Search Yet</string>
    <string name="search_movies">Search Movies…</string>
    <string name="fake_overview">awesome movie .. you gotta watch it !!</string>
    <string name="favourites">Favourites</string>
    <string name="your_fav_is_empty">your fav is empty !!</string>
    <string name="moviesLabel">Movies</string>
    <string name="youtube_label">youtube</string>
    <string name="netflix">Netflix</string>
    <string name="overview">Venom. The symbiotic is awesome and i loved the bonding with Tom Hardy character which truly moved the movie forward. Definitely the strongest point within the movie and was eager for more!</string>
    <string name="fake_rate">7.5</string>
</resources>