<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/backgroundColor">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFav"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_margin="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewFav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/purple_500"
            android:contentDescription="@null"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMovieTitleFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fake_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/cardViewFav"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvMovieOverviewFav"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:ellipsize="end"
        android:lines="3"
        android:maxLines="3"
        android:textColor="@color/opacityWhiteColor"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/tvMovieDateFav"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieDateFav"
        tools:text="@string/overview" />


    <TextView
        android:id="@+id/tvMovieRateFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tvMovieOverviewFav"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tvMovieDateFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:textColor="@color/opacityWhiteColor"
        app:layout_constraintStart_toStartOf="@+id/tvMovieTitleFav"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitleFav"
        tools:layout_editor_absoluteY="16dp"
        tools:text="@string/movie_date" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:numStars="10"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="@+id/tvMovieRateFav"
        app:layout_constraintStart_toEndOf="@+id/tvMovieRateFav"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

